# Python_Practice

./: .gitignore  AsyncIo.py  BTS_Loops.py  Class.py  ContextManagers.py  DateTime.py  Exception.py  Info.txt  Iterators.py  Modules.py  MultiProcessing.py  Oops.py  Request.py  SMTP.py  Selenium.py  Tkinter.py  conditionalProblems.py  csvRead.py  data_types.py  decorators.py  dictionaryType.py  fileHandeling.py  functions.py  handlingAPI.py  hello_python.py  index.py  listType.py  loopsProblems.py  numberType.py  pyproject.toml  python_MongoDB.py  scopes.py  stringType.py  tupleType.py  youtube.txt  youtubeManager.py  youtubeManager_DB.py  youtube_videos.db
FastAPI/: index.py  main.py  pythonTypes.py
FastAPI/config/: db.py
FastAPI/models/: note.py
FastAPI/routes/: notes.py
FastAPI/schemas/: schemas.py
FastAPI/templates/: index.html
virtual_py/: info.txt
